# cpp_projects

echo_server/: CMakeLists.txt  main.cpp
login_server/: CMakeLists.txt  init.sql  main.cpp
